--- a/index.html
+++ b/index.html
@@ -87,8 +87,8 @@
     <!-- 3. Sección de Recomendados -->
     <section id="recomendados" class="section recommended">
         <div class="container">
-            <h2 class="section-title"><span class="decorative-icon"><i class="fas fa-star"></i></span> Favoritos de
-                Santa <span class="decorative-icon"><i class="fas fa-star"></i></span></h2>
+            <h2 class="section-title"><span class="decorative-icon"><i class="fas fa-gift"></i></span> Catálogo de
+                Juguetes <span class="decorative-icon"><i class="fas fa-gift"></i></span></h2>
             <div class="products-grid" id="products-container">
                 <!-- Products will be loaded dynamically via script.js -->
             </div>
