Feat: Replace free wrapping with personalized attention benefit

--- a/index.html
+++ b/index.html
@@ -193,10 +193,11 @@
                 <p>Revisa tu producto antes de pagar</p>
             </div>
             <div class="benefit-item">
-                <div class="icon-circle"><i class="fas fa-gift"></i></div>
-                <h3>Envoltura Gratis</h3>
-                <p>¡Listo para poner bajo el árbol!</p>
+                <div class="icon-circle"><i class="fas fa-heart"></i></div>
+                <h3>Atención Personalizada</h3>
+                <p>Te ayudamos a elegir el regalo perfecto</p>
             </div>
+
         </div>
     </section>
 
