Polish: Update copy, fix baby image, add search functionality

--- a/index.html
+++ b/index.html
@@ -75,23 +75,22 @@
     <!-- 2. Hero Principal -->
     <!-- 2. Hero Principal -->
     <section class="hero">
+        <div class="hero-overlay"></div>
         <div class="container hero-content">
-            <div class="hero-text">
-                <div class="hero-badge"><i class="fas fa-gift"></i> Especial Navidad 2024</div>
-                <h1>La magia de la <br>Navidad comienza <br>con el <span class="highlight-text">regalo perfecto</span>
-                </h1>
-                <p>Encuentra los juguetes que harán brillar los ojos de tus hijos esta Navidad. Selección especial para
-                    cada edad con entrega garantizada antes del 24.</p>
-                <div class="hero-buttons">
-                    <a href="#recomendados" class="btn btn-primary"><i class="fas fa-gift"></i> Explorar regalos</a>
-                    <a href="#ofertas" class="btn btn-outline-light">Ver ofertas navideñas</a>
-                </div>
-                <div class="hero-features">
-                    <span><i class="fas fa-handshake"></i> Entrega Personal</span>
-                    <span><i class="fas fa-lock"></i> Pago seguro</span>
-                    <span><i class="fas fa-heart"></i> Atención Personal</span>
-                </div>
+            <span class="hero-badge">Especial Navidad 2024</span>
+            <h1>La Navidad comienza con el regalo perfecto</h1>
+            <p>Encuentra los juguetes que harán brillar los ojos de tus hijos esta Navidad. Selección especial para cada
+                edad con entrega garantizada antes del 24.</p>
+            <div class="hero-buttons">
+                <a href="#productos" class="btn btn-primary">Ver Catálogo</a>
+                <a href="#ofertas" class="btn btn-outline-light">Ofertas Especiales</a>
             </div>
+            <div class="hero-features">
+                <span><i class="fas fa-handshake"></i> Entrega Personal</span>
+                <span><i class="fas fa-lock"></i> Pago seguro</span>
+                <span><i class="fas fa-heart"></i> Atención Personal</span>
+            </div>
+        </div>
         </div>
     </section>
 
@@ -137,7 +136,7 @@
                 edad</h2>
             <div class="categories-grid">
                 <div class="category-card">
-                    <img src="https://images.unsplash.com/photo-1515488042361-25f4682ee084?auto=format&fit=crop&w=500&q=60"
+                    <img src="https://images.unsplash.com/photo-1519689680058-324335c77eba?auto=format&fit=crop&w=500&q=60"
                         alt="Bebés">
                     <div class="category-overlay">
                         <h3>Bebés</h3>
