Fix: Implement 'Ver Catálogo' button reset logic

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <p>Encuentra los juguetes que harán brillar los ojos de tus hijos esta Navidad. Selección especial para cada
                 edad con entrega garantizada antes del 24.</p>
             <div class="hero-buttons">
-                <a href="#productos" class="btn btn-primary">Ver Catálogo</a>
+                <a href="#productos" class="btn btn-primary" id="view-catalog-btn">Ver Catálogo</a>
                 <a href="#ofertas" class="btn btn-outline-light">Ofertas Especiales</a>
             </div>
             <div class="hero-features">
