Feat: Implement product detail modal (Amazon-style)

--- a/index.html
+++ b/index.html
@@ -128,6 +128,33 @@
         </div>
     </div>
 
+    <!-- Product Detail Modal -->
+    <div id="product-modal" class="product-modal">
+        <div class="product-modal-content">
+            <button id="close-product-modal" class="close-btn"><i class="fas fa-times"></i></button>
+            <div class="product-modal-body">
+                <div class="product-modal-image">
+                    <img id="modal-product-image" src="" alt="Producto">
+                </div>
+                <div class="product-modal-info">
+                    <span id="modal-product-badge" class="badge"></span>
+                    <h2 id="modal-product-name">Nombre del Producto</h2>
+                    <div class="product-rating" id="modal-product-rating">
+                        <!-- Stars will be injected here -->
+                    </div>
+                    <p id="modal-product-description" class="modal-description">Descripción detallada del producto.</p>
+                    <div class="product-price large">
+                        <span id="modal-product-price" class="current-price">$0.00</span>
+                        <span id="modal-product-old-price" class="old-price"></span>
+                    </div>
+                    <button id="modal-add-to-cart" class="btn btn-primary btn-block btn-lg">
+                        Agregar al carrito
+                    </button>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <!-- 4. Sección por Edades -->
     <!-- 4. Sección por Edades -->
     <section class="section ages">
