--- a/index.html
+++ b/index.html
@@ -303,6 +303,8 @@
         </div>
     </footer>
 
+    <!-- PapaParse for CSV Parsing -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
     <script src="products.js"></script>
     <script src="script.js"></script>
 </body>
